src/main/java/com/example/fileserver/common/error/ErrorCode.java
package com.example.fileserver.common.error;

public enum ErrorCode {
    INVALID_PATH,
    INVALID_ENTRY_NAME,
    ENTRY_NOT_FOUND,
    ENTRY_ALREADY_EXISTS,
    NOT_A_DIRECTORY,
    NOT_A_FILE,
    INVALID_MOVE_TARGET,
    INVALID_RANGE_HEADER,
    INVALID_TAG,
    METADATA_SYNC_FAILED,
    TRANSACTION_SYNCHRONIZATION_UNAVAILABLE,
    FILE_OPERATION_FAILED,
    UNAUTHORIZED_API_KEY,
    INTERNAL_SERVER_ERROR
}
